packages/cashc/test/compiler/ParseError/exponentiation.cash
contract Test(int x) {
    function hello() {
        int myVariable = 10 - 4;
        int myOtherVariable = 20 ** myVariable % 2;
        require(myOtherVariable > x);
    }
}
